--- a/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-announcement-notice-template/referential-announcement-notice-template.component.html
@@ -76,6 +76,7 @@
     <li>&#123;civilite&#125;</li>
     <li>&#123;adresse&#125;</li>
     <li>&#123;denomination&#125;</li>
+    <li>&#123;sigle&#125;</li>
     <li>&#123;ville&#125;</li>
     <li>&#123;departement&#125;</li>
     <li>&#123;codePostal&#125;</li>
