--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -240,6 +240,7 @@
               <li>&#123;civilite&#125;</li>
               <li>&#123;adresse&#125;</li>
               <li>&#123;denomination&#125;</li>
+              <li>&#123;sigle&#125;</li>
               <li>&#123;ville&#125;</li>
               <li>&#123;codePostal&#125;</li>
               <li>&#123;activitePrincipale&#125;</li>
