--- a/client/src/app/modules/tiers/components/confrere/confrere.component.html
+++ b/client/src/app/modules/tiers/components/confrere/confrere.component.html
@@ -18,8 +18,8 @@
             <div class="full-width">
               <fieldset [disabled]="editMode==false" class="fieldset-no-border">
                 <table class="full-width">
-                  <tr *ngIf="selectedConfrere.id">
-                    <td>
+                  <tr>
+                    <td *ngIf="selectedConfrere.id">
                       <generic-input [(model)]="selectedConfrere.id" label="Identifiant technique" [form]="entityForm2"
                         propertyName="id" [isMandatory]="true" [isDisabled]="true"></generic-input>
                     </td>
