--- a/client/src/app/modules/profile/components/my-profil/my-profil.component.html
+++ b/client/src/app/modules/profile/components/my-profil/my-profil.component.html
@@ -34,6 +34,15 @@
           </td>
         </tr>
       </table>
+      <table class="full-width">
+        <tr>
+          <td>
+            <button mat-raised-button (click)="deleteSearchPreferences()" color="primary" class="mini-fab-add">
+              Effacer mes recherches sauvegardées
+            </button>
+          </td>
+        </tr>
+      </table>
     </div>
   </form>
 </div>
