--- a/client/src/app/modules/accounting/components/accounting-profit-lost/accounting-profit-lost.component.html
+++ b/client/src/app/modules/accounting/components/accounting-profit-lost/accounting-profit-lost.component.html
@@ -13,6 +13,16 @@
             [form]="accountingprofitAndLostForm" propertyName="endDate" [isMandatory]="false"
             [isDisabled]="false"></generic-datepicker>
         </td>
+        <td class="fab-td-button padding-fab">
+          <button mat-mini-fab matTooltip="Mois en cours" (click)="setCurentMonth()" class="add-button">
+            <mat-icon>calendar_view_month</mat-icon>
+          </button>
+        </td>
+        <td class="fab-td-button padding-fab">
+          <button mat-mini-fab matTooltip="Exercice en cours" (click)="setCurentFiscalYear()" class="add-button">
+            <mat-icon>date_range</mat-icon>
+          </button>
+        </td>
         <td class="fab-td-button">
           <button mat-mini-fab color="warn" matTooltip="Rechercher" (click)="refreshprofitAndLost()" class="add-button">
             <mat-icon>search</mat-icon>
