--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -23,12 +23,15 @@
                   <generic-input [(model)]="selectedProvider.id" label="Identifiant technique" [form]="entityForm2"
                     propertyName="id" [isMandatory]="true" [isDisabled]="true"></generic-input>
                 </td>
-              </tr>
-              <tr>
                 <td>
                   <generic-input [(model)]="selectedProvider.label" label="Nom fonctionnel" [maxLength]="100"
                     [form]="entityForm2" propertyName="label" [isMandatory]="true"
                     [isDisabled]="!editMode"></generic-input>
+                </td>
+                <td>
+                  <generic-input [(model)]="selectedProvider.idAs400" label="Identifiant AS400" [maxLength]="250"
+                    [form]="entityForm2" propertyName="idAs400" [isMandatory]="false" [isDisabled]="!editMode"
+                    type="number"></generic-input>
                 </td>
               </tr>
             </table>
