--- a/client/src/app/modules/miscellaneous/components/confreres-dialog/confreres-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/confreres-dialog/confreres-dialog.component.html
@@ -6,5 +6,5 @@
 <mat-dialog-content class="mat-content">
   <sort-table [columns]="displayedColumns" (onRowClick)="chooseConfrere($event)" [values]="confreres"
     [noPaddingBottom]="true" [noMaxHeight]="true" tableName="Confrères" [filterText]="searchText"
-    [filterPredicate]="filterPredicate"></sort-table>
+    [filterPredicate]="filterPredicate" [isSmallestHeight]="true"></sort-table>
 </mat-dialog-content>
