--- a/client/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -35,7 +35,7 @@
       </ng-template>
     </mat-tab>
     <mat-tab label="Prepa visite" *ngIf="tiers.id!=null && tiers.id!=undefined || (rffSearch?.tiers!=null && rffSearch?.tiers!=undefined)" >
-      <prepa-visite-tiers-info [tiers]="tiers" ></prepa-visite-tiers-info>
+      <prepa-visite-tiers-responsable-info [tiers]="tiers" ></prepa-visite-tiers-responsable-info>
       <!-- <prepa-visite-responsable-customer-orders [tiers]="tiers" [editMode]="editMode"></prepa-visite-responsable-customer-orders> -->
     </mat-tab>
     <mat-tab label="Prestations" *ngIf="tiers.id!=null && tiers.id!=undefined">
