--- a/client/src/app/modules/tiers/components/prepa-visite-tiers-responsable-info/prepa-visite-tiers-responsable-info.component.html
+++ b/client/src/app/modules/tiers/components/prepa-visite-tiers-responsable-info/prepa-visite-tiers-responsable-info.component.html
@@ -6,11 +6,11 @@
       </sort-table>
     </mat-tab>
 
-    <!-- <mat-tab label="Fiche du Responsable">
+    <mat-tab label="Fiche du Responsable">
       <sort-table [columns]="displayedColumnsResponsablesRff" [values]="responsablesRff"
                   tableName="Tiers" *ngIf="displayedColumnsTiersRff && displayedColumnsTiersRff.length>0 ">
       </sort-table>
-    </mat-tab> -->
+    </mat-tab>
 
   </mat-tab-group>
 </div>
