--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -88,7 +88,7 @@
     </table>
   </mat-sidenav>
 
-  <mat-sidenav-content>
+  <mat-sidenav-content class="padding-bottom">
     <div *ngIf="!editMode && !quotation.id && !isQuotationUrl && !idQuotation">
       <ordering-list></ordering-list>
     </div>
