--- a/client/src/app/modules/tiers/components/visit-prepa-tiers-responsible-info/visit-prepa-tiers-responsible-info.component.html
+++ b/client/src/app/modules/tiers/components/visit-prepa-tiers-responsible-info/visit-prepa-tiers-responsible-info.component.html
@@ -1,4 +1,5 @@
 <div class="mat-elevation-z2 form-div">
+  <fieldset [disabled]="editMode==false" class="fieldset-no-border">
 
       <sort-table [columns]="displayedColumnsTiersRff" [values]="tiersRff"
                   tableName="Tiers" *ngIf="displayedColumnsTiersRff && displayedColumnsTiersRff.length>0 ">
@@ -7,5 +8,5 @@
       <sort-table [columns]="displayedColumnsResponsablesRff" [values]="responsablesRff"
                   tableName="Tiers" *ngIf="displayedColumnsTiersRff && displayedColumnsTiersRff.length>0 ">
       </sort-table>
-
+</fieldset>
 </div>
