--- a/client/src/app/modules/tiers/components/visit-prepa-customer-orders-responsible/visit-prepa-customer-orders-responsible.component.html
+++ b/client/src/app/modules/tiers/components/visit-prepa-customer-orders-responsible/visit-prepa-customer-orders-responsible.component.html
@@ -1,3 +1,8 @@
 <div class="mat-elevation-z2 form-div">
 
+  <fieldset [disabled]="false" class="fieldset-no-border">
+      <sort-table [actions]="salesRecordTableActions" [columns]="displayedColumnsSalesRecord" [values]="this.customerOrderFiller"
+                  tableName="customerOrder">
+      </sort-table>
+</fieldset>
 </div>
