--- a/client/src/app/modules/tiers/components/complaint-tiers/complaint-tiers.component.html
+++ b/client/src/app/modules/tiers/components/complaint-tiers/complaint-tiers.component.html
@@ -34,7 +34,7 @@
         </tr>
       </table>
       <div class="mt-3" style="text-align: center;">
-        <button matTooltip="Reclamation" mat-fab color="accent" (click)="submitForm()">Submit</button>
+        <button matTooltip="Reclamation" mat-fab color="accent" (click)="submitForm()">Soumettre</button>
       </div>
     </mat-tab>
       <mat-tab label="Reclamations associés">
